fix(repo/settings): `change visibility` preview buttons colors

--- a/catppuccin.user.css
+++ b/catppuccin.user.css
@@ -781,6 +781,18 @@
   }
 }
 
+/* New change visibility box star and watcher preview buttons Fix */
+.btn.color-fg-danger.cursor-default {
+    color: var(--color-btn-danger-text) !important;
+    background-color: var(--color-btn-danger-bg);
+}
+.btn.color-fg-danger.cursor-default:hover {
+    background-color: var(--color-btn-danger-hover-bg);
+}
+.btn.color-fg-danger.cursor-default > svg.octicon {
+    color: var(--color-btn-danger-text) !important;
+}
+
 /* New change visibility box danger buttons Fix */
 :where(#repo-visibility-proceed-button-public, #repo-visibility-proceed-button-private):not([data-next-stage]) {
     color: var(--color-btn-danger-text);
